feat(footer): add footer section for improved structure and branding
- Added a footer section with copyright information
- Included dynamic year display
- Enhanced overall layout and organization

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>
+        © <span id="year" class="year-space"></span> Miguel Enrique Dasalla. All
+        Rights Reserved.
+      </p>
+    </footer>
     <script src="/script.js"></script>
   </body>
 </html>
